# Terrane

./: .gitignore  LICENSE  README-CN.md  README.md  知识库深度优化方案.md
Project-design/: versions.md
Project-design/design/: 01-system.md  02-database.md  03-api.md  04-services.md  05-frontend.md  06-deployment.md  07-parse-engine.md  openapi.yaml
Project-design/poc/: 01_d2_hybrid.sql  02_r1_projection.sql  03_r16_temporal.sql  Dockerfile.terrane-postgres  Dockerfile.terrane-redis  poc-results.md  run_poc.sh
Project-design/prd/: v1.0-terrane-platform.md
Project-design/specs/: eval-plan.md  onboarding-script.md
Project-source/: .gitignore  .gitlab-ci.yml  local-dev-issue.py
Project-source/terrane-admin-server/: Dockerfile  alembic.ini  main.py  pyproject.toml
Project-source/terrane-admin-server/app/: __init__.py  cli.py  main.py
Project-source/terrane-admin-server/app/api/: deps.py  probes.py
Project-source/terrane-admin-server/app/api/admin_v1/: audit_logs.py  auth.py  branding.py  channels.py  knowledge_bases.py  license.py  members.py  operators.py  settings.py  wizard.py  workspaces.py
Project-source/terrane-admin-server/app/core/: config.py  errors.py  ids.py  logging.py  security.py
Project-source/terrane-admin-server/app/db/: base.py  dialects.py  platform.py  session.py
Project-source/terrane-admin-server/app/licensing/: state.py  store.py
Project-source/terrane-admin-server/app/middlewares/: license_gate.py
Project-source/terrane-admin-server/app/migrations/: env.py
Project-source/terrane-admin-server/app/migrations/versions/: 000001_users_create_table.py  000002_users_must_change_password.py  000003_model_channels.py  000004_drop_model_channels.py
Project-source/terrane-admin-server/app/models/: user.py
Project-source/terrane-admin-server/app/models/platform/: __init__.py  audit_log.py  branding.py  front_user.py  knowledge_base.py  membership.py  model_channel.py  system_setting.py  workspace.py
Project-source/terrane-admin-server/app/permissions/: deps.py  registry.py  roles.py
Project-source/terrane-admin-server/app/repositories/: base.py  user.py
Project-source/terrane-admin-server/app/schemas/: auth.py  wizard.py
Project-source/terrane-admin-server/app/services/: audit_service.py  auth_service.py  cache.py  channel_presets.py  crypto.py  email_presets.py  email_service.py  platform_settings.py  ratelimit.py  session_service.py  wizard_service.py
Project-source/terrane-server/: Dockerfile  main.py  pyproject.toml
Project-source/terrane-server/app/: __init__.py  main.py  observability.py
Project-source/terrane-server/app/adapters/object_storage/: __init__.py  base.py
Project-source/terrane-server/app/adapters/object_storage/aliyun_oss/: adapter.py
Project-source/terrane-server/app/adapters/object_storage/azure_blob/: adapter.py
Project-source/terrane-server/app/adapters/object_storage/google_storage/: adapter.py
Project-source/terrane-server/app/adapters/object_storage/huawei_obs/: adapter.py
Project-source/terrane-server/app/adapters/object_storage/local/: adapter.py
Project-source/terrane-server/app/adapters/object_storage/s3/: adapter.py
Project-source/terrane-server/app/adapters/object_storage/tencent_cos/: adapter.py
Project-source/terrane-server/app/adapters/object_storage/volcengine_tos/: adapter.py
Project-source/terrane-server/app/api/: deps.py
Project-source/terrane-server/app/api/v1/: assistant.py  auth.py  branding.py  external.py  knowledge_bases.py  license.py  mcp.py  memories.py  models.py  probes.py  sso.py
Project-source/terrane-server/app/core/: config.py  errors.py  ids.py  security.py
Project-source/terrane-server/app/db/: base.py  dialects.py  session.py
Project-source/terrane-server/app/licensing/: state.py
Project-source/terrane-server/app/middlewares/: license_gate.py
Project-source/terrane-server/app/migrations/: env.py
Project-source/terrane-server/app/migrations/versions/: 000001_workspaces_users_memberships.py  000002_b2b_baseline.py  000003_branding_logos.py  000004_knowledge_bases_kb_members.py  000005_raw_sources_chunks_wiki_jobs.py  000006_model_channels.py  000007_api_keys.py  000008_memories.py  000009_conversations_messages.py  000010_raw_source_originals.py  000011_raw_source_renders.py  000012_doc_tree.py  000013_retrieval_feedback.py  000014_ingest_job_resume.py
Project-source/terrane-server/app/models/: api_key.py  audit_log.py  branding.py  conversation.py  kb_content.py  knowledge_base.py  membership.py  memory.py  model_channel.py  system_setting.py  user.py  workspace.py
Project-source/terrane-server/app/repositories/: base.py  user.py
Project-source/terrane-server/app/schemas/: auth.py
Project-source/terrane-server/app/services/: auth_service.py  cache.py  crypto.py  email_service.py  graph_service.py  ingest_service.py  memory_service.py  model_channels.py  model_client.py  platform_settings.py  ratelimit.py  render_service.py  retrieval_service.py  session_service.py  storage.py  studio_service.py  token_service.py  totp.py  tree_service.py  verify_service.py  wiki_service.py
Project-source/terrane-server/app/services/learning/: __init__.py  feedback_log.py
Project-source/terrane-server/app/services/parse/: engine.py  figures.py  router.py  scanned_table.py  stream.py  video.py  vl.py  xlsx_drawing.py
Project-source/terrane-server/app/services/parse/structure/: __init__.py  box.py  engine.py  extract.py  hierarchy.py  reading_order.py  tables.py
ops/: XINCHUANG.md  backup.sh  build-multiarch.sh
terrane-deploy/: README.md
terrane-shared/: data-classification.md  error-codes.yaml  webhook-events.md
(+200 files in other folders)
